--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babelify": "^10.0.0",
+    "css-modulesify": "^0.28.0",
     "inliner": "^1.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "watchify": "^4.0.0",
     "web-vitals": "^2.1.4",
     "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "start:parcel": "parcel index.html",
+    "build:parcel": "parcel build index.html --public-url ./",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -46,6 +50,7 @@
     "@babel/eslint-parser": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "browserify": "^17.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -53,7 +58,13 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fast-text-encoding": "^1.0.6",
+    "gulp": "^4.0.2",
+    "parcel": "^2.8.3",
+    "parcel-plugin-inliner": "^1.0.16",
+    "postcss-safe-parser": "^6.0.0",
     "prettier": "^2.8.6",
-    "puppeteer": "^19.7.5"
+    "puppeteer": "^19.7.5",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
